[tool.poetry]
name = "vehiclerentalagency"
version = "0.1.0"
description = ""
authors = ["Nishat <kcobra557@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
